--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,9 @@ margin:10px 0;
 
 
 #quiz {
-  margin: -44px 50px 0px;
+ 
   position: relative;
-  width: calc(100% - 100px);
+ 
 }
 
 #quiz h1 {
@@ -130,14 +130,14 @@ margin:10px 0;
 }
 
 #question label:hover {
-  background: #6efc71;
-    border-color:#0e4c21;
+  background: #3498db;
+    color:#ffffff;
 }
 
 #question input[type=radio]:checked + label {
 
-  background: #e67e22;
-  border-color:#e44e22;
+  background: #1abc7c;
+      color:#ffffff;
   /*color: #FAFAFA;*/
 }
 
